# journey-to-the-end-of-ai

./: README.md
Agents/Project - 1 - Simple CLI Bot/: pyproject.toml
Agents/Project - 1 - Simple CLI Bot/src/: agent.py  main.py  types.py
Agents/Tutorials/Normal Framework Based Agents/: agent.py  llm.py  main.py  pyproject.toml  requirements.txt  tool.py  web_search.py
Agents/Tutorials/Task Decomposition/: main.py  pyproject.toml  requirements.txt
LangGraph/Basic Chatbot/: main.ipynb  pyproject.toml
LangGraph/Basic Chatbot with Tools Integration and ReAct Arch/: main.ipynb
LangGraph/Basic Chatbot with Tools, Memory, Streaming and Human in Loop/: humanInLoop.ipynb  main.ipynb
LangGraph/MCP Tutorial/: add_server.py  main.ipynb  mult_server.py  pyproject.toml  weather_server.py
LangGraph/ReAct - Sub Agents/: main.py  pyproject.toml  react_subagents_demo.ipynb  requirements.txt
LangGraph/ReAct - Sub Agents/src/: prompts.py  subagent_tool.py  tools.py
MCP/Project 1 - EASY - Local AI File Assistant/: README.md  client.py  pyproject.toml  server.py
MCP/Project 1 - EASY - Local AI File Assistant/testing folder/: requirements.txt  server.py  weird.txt
MCP/Project 2 - EASY - Autonomous Repo Assistant/: README.md  requirements.txt
MCP/Project 2 - EASY - Autonomous Repo Assistant/agents/: code_explainer.py  file_summarizer_agent.py  overview_agent.py  router.py
MCP/Project 2 - EASY - Autonomous Repo Assistant/graph/: nodes.py  state.py  (+1 more)
MCP/Project 2 - MED - Autonomous Repo Assistant/: TODO  main.py  pyproject.toml
MCP/Tutorial/: client.py  main.ipynb
(+40 files in other folders)
