[project]
name = "project-1-easy-local-ai-file-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.131.0",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
]
